added date countdown

--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -30,3 +30,9 @@ h1{
     width: 100px;
     float: left;
 }
+
+#demo{
+    font-family: 'Mountains of Christmas', cursive;
+    font-size: 100px;
+    color: red;
+}
